--- a/styles/index.css
+++ b/styles/index.css
@@ -1,17 +1,13 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css");
-/* @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+Lao:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"); */
-@font-face {
-  font-family: "Lao MN";
-  src: url(/assets/font/Lao\ MN.ttc);
-  font-style: normal;
-  font-weight: 400;
-}
+@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap");
 body {
   margin: 0;
   padding: 0;
-  font-family: "Lao MN", sans-serif !important;
+  font-family: "IBM Plex Sans", sans-serif;
   font-weight: 400;
-  color: #000000;
+  font-style: normal;
+  color: #181818;
+  overflow-x: hidden;
 }
 .container {
   max-width: 1440px;
@@ -29,9 +25,16 @@ a {
 .btnP {
   border-radius: 32px;
   border: 1px solid #d9ac52;
-  padding: 0.5rem 1rem;
-  color: #d9ac52;
+  padding: 1rem 3rem;
+  color: #ffffff;
   line-height: 1;
+  font-size: 22px;
+  background: #ffa369;
+  display: inline-block;
+}
+.btnP:hover {
+  opacity: 90%;
+  color: #ffffff;
 }
 h2 {
   font-size: 54px;
@@ -40,6 +43,9 @@ h2 {
 /* Header */
 header .container {
   margin-bottom: 0 !important;
+}
+.navbar-light .navbar-nav .nav-link {
+  color: #181818;
 }
 .nav-link {
   font-size: 18px;
@@ -57,6 +63,9 @@ header .container {
     rgba(107, 93, 83, 0) 95.3%
   );
 }
+.hero-section .btnP {
+  margin-top: 2rem;
+}
 .hero-back {
   min-height: 80vh;
   background: url(../assets/images/hero.svg) no-repeat center / cover;
@@ -67,7 +76,7 @@ header .container {
 }
 .hero-section .pattern {
   position: relative;
-  left: 174px;
+  /* left: 174px; */
 }
 .hero-section .text {
   position: absolute;
@@ -88,20 +97,24 @@ header .container {
   font-weight: 500;
   z-index: 1;
 }
-.hero-section .text::after {
+.hero-section .container::after {
   content: "";
-  background: linear-gradient(180deg, #d9ac52 0%, rgba(217, 172, 82, 0) 100%);
+  /* background: linear-gradient(180deg, #d9ac52 0%, rgba(217, 172, 82, 0) 100%); */
   width: 87px;
+  background: #69be5d;
   height: 100%;
   left: 87px;
+  top: 0;
   position: absolute;
 }
-.hero-section .text::before {
+.hero-section .container::before {
   content: "";
-  background: linear-gradient(180deg, rgba(68, 111, 80, 0) 0%, #446f50 100%);
+  /* background: linear-gradient(180deg, rgba(68, 111, 80, 0) 0%, #446f50 100%); */
   width: 87px;
+  background: #febd43;
   height: 100%;
   left: 0;
+  z-index: 1;
   position: absolute;
 }
 
@@ -109,25 +122,26 @@ header .container {
 .history-section {
   margin-bottom: 80px;
 }
-.history-section .col-md-6:first-child {
+.history-section .col-lg-6:first-child {
   padding-right: 70px;
   position: relative;
 }
-.history-section .col-md-6:first-child::after {
+.history-section .col-lg-6:first-child::after {
   content: "";
   height: 195px;
   width: 195px;
-  background: linear-gradient(
+  /* background: linear-gradient(
     140.73deg,
     #d9ac52 11.11%,
     rgba(217, 172, 82, 0) 104.97%
-  );
+  ); */
+  background: #febd43;
   position: absolute;
   right: 2rem;
   bottom: -2rem;
   transform: rotate(-180deg);
 }
-.history-section .col-md-6:first-child .image {
+.history-section .col-lg-6:first-child .image {
   background: url(/assets/images/history.svg) no-repeat center / cover;
   min-height: 50vh;
 }
@@ -144,19 +158,20 @@ header .container {
 .history-section.focus .row {
   flex-direction: row-reverse;
 }
-.history-section.focus .col-md-6:first-child::after {
+.history-section.focus .col-lg-6:first-child::after {
   left: 2rem;
-  background: linear-gradient(
+  /* background: linear-gradient(
     223.94deg,
     #446f50 0%,
     rgba(68, 111, 80, 0) 117.93%
-  );
+  ); */
+  background: #69be5d;
 }
-.history-section.focus .col-md-6:first-child .image {
+.history-section.focus .col-lg-6:first-child .image {
   background: url(/assets/images/child.svg) no-repeat center / cover;
   min-height: 50vh;
 }
-.history-section.focus .col-md-6:first-child {
+.history-section.focus .col-lg-6:first-child {
   padding-left: 70px !important;
   padding-right: 0;
 }
@@ -164,6 +179,8 @@ header .container {
 .stats-section {
   padding: 3rem 0;
   background-color: #446f50;
+  background: linear-gradient(0deg, #32b48a, #32b48a),
+    linear-gradient(313.79deg, rgba(68, 111, 80, 0) -19.26%, #446f50 98.62%);
   position: relative;
 }
 .stats-section .d-flex {
@@ -172,7 +189,8 @@ header .container {
 }
 .figure-1 {
   font-size: 132px;
-  color: #d9ac52;
+  /* color: #d9ac52; */
+  color: #ffffff;
 }
 .stats-section .img-stat {
   width: 55px;
@@ -190,7 +208,8 @@ header .container {
 .stats-section::after {
   content: "";
   width: 98px;
-  background-color: #d9ac52;
+  /* background-color: #d9ac52; */
+  background: #febd43;
   height: 110%;
   position: absolute;
   display: block;
@@ -207,6 +226,9 @@ header .container {
   font-size: 54px;
   color: #ffffff;
   transform: rotate(-90deg);
+}
+.stats-section h6 {
+  color: #ffffff;
 }
 
 /* Involved section */
@@ -234,16 +256,43 @@ header .container {
   height: 90px;
   width: 90px;
 }
+.involved-section .col-md-4 .btnP {
+  background: transparent;
+  border: #69be5d solid 1.8px;
+  color: #69be5d;
+}
+.involved-section .col-md-4 .btnP:hover {
+  color: #69be5d;
+}
+.involved-section .col-md-4:first-child .btnP {
+  background: transparent;
+  border: #febd43 solid 1.8px;
+  color: #febd43;
+}
+.involved-section .col-md-4:first-child .btnP:hover {
+  color: #febd43;
+}
+.involved-section .col-md-4:last-child .btnP {
+  background: transparent;
+  border: #32b48a solid 1.8px;
+  color: #32b48a;
+}
+.involved-section .col-md-4:last-child .btnP:hover {
+  color: #32b48a;
+}
 
 /* Footer */
 footer {
   padding: 5rem 0;
-  background-color: #446f50;
+  /* background-color: #446f50; */
+  background: #ffa369;
 }
 .footer-link {
-  color: #ffffff;
+  /* color: #ffffff; */
+  color: #181818;
+  font-weight: 400;
 }
-footer .col-md-4:last-child {
+footer .social-links {
   display: flex;
   justify-content: center;
   align-items: flex-end;
@@ -251,17 +300,20 @@ footer .col-md-4:last-child {
 footer .row {
   position: relative;
 }
-footer .row::after {
+footer .foot-main:after {
   content: "";
-  border-bottom: 1px solid #c7c7c7;
+  /* border-bottom: 1px solid #c7c7c7; */
   width: 100%;
   position: absolute;
   left: 0;
   bottom: -100px;
+  border: 1px solid #00000066;
 }
+
 /* About page */
 .shallow-banner {
-  background-color: #d9ac52;
+  /* background-color: #d9ac52; */
+  background: #ffa369;
   padding: 5rem 0;
   margin-bottom: 80px;
 }
@@ -310,4 +362,169 @@ footer .row::after {
 }
 .modal-dialog {
   max-width: 800px;
+}
+.history-section.col_1 .col-lg-6:first-child .image {
+  background: url(/assets/images/col-img-4.svg) no-repeat center / cover;
+}
+.history-section.col_2 .col-lg-6:first-child .image {
+  background: url(/assets/images/col-img-3.svg) no-repeat center / cover;
+}
+.history-section.col_3 .col-lg-6:first-child .image {
+  background: url(/assets/images/col-img-2.svg) no-repeat center / cover;
+}
+.history-section.col_4 .col-lg-6:first-child .image {
+  background: url(/assets/images/col-img-1.svg) no-repeat center / cover;
+}
+.attribute-section .col-md-3 .shape {
+  padding: 3rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+.attribute-section .col-md-3 .shape h3 {
+  font-size: 22px;
+  color: #fff;
+  margin-top: 3rem;
+}
+.attribute-section .col-md-3 .shape img {
+  height: 85px;
+  width: 85px;
+}
+.attribute-section .col-md-3:last-child .shape img {
+  padding: 5px;
+}
+.attribute-section .col-md-3:nth-child(n + 1) .shape {
+  background-color: #ffa369;
+}
+.attribute-section .col-md-3:nth-child(n + 2) .shape {
+  background-color: #febd43;
+}
+.attribute-section .col-md-3:nth-child(n + 3) .shape {
+  background-color: #69be5d;
+}
+.attribute-section .col-md-3:nth-child(n + 4) .shape {
+  background-color: #febd43;
+}
+/* Media Queries */
+@media screen and (max-width: 992px) {
+  .hero-section .container::after {
+    width: 100%;
+    height: 41px;
+    left: 0;
+  }
+  .hero-section .container::before {
+    width: 100%;
+    height: 41px;
+    left: 0;
+    top: 41px;
+  }
+  .container {
+    padding: 0 40px;
+  }
+  .history-section .col-lg-6:last-child {
+    margin-top: 4rem;
+  }
+  .history-section.focus .col-lg-6:first-child::after {
+    right: 0;
+    left: auto;
+  }
+  .history-section.focus .col-lg-6:first-child {
+    padding-left: 0 !important;
+    padding-right: 2rem;
+  }
+  .history-section .col-lg-6:first-child::after {
+    height: 110px;
+    width: 110px;
+    right: 0;
+  }
+  .history-section .col-lg-6:first-child {
+    padding-right: 2rem;
+  }
+  .stats-section {
+    padding: 7rem 0 3rem 0;
+  }
+  .stats-section .img-pattern {
+    display: none;
+  }
+  .stats-section::after {
+    height: 73px;
+    width: 100%;
+    left: 0;
+    top: 40px;
+  }
+  .stats-section::before {
+    top: 40px;
+    transform: rotate(0deg) translateX(-50%);
+    left: 50%;
+    font-size: 44px;
+  }
+  .stats-section .col-lg-3 {
+    padding-bottom: 3rem;
+    border-bottom: 1px solid #ffffff40;
+    margin-top: 3rem;
+  }
+
+  .stats-section .col-lg-3:last-child {
+    border-bottom: none;
+    padding-bottom: 0;
+  }
+  .hero-section .col-md-6 {
+    left: 0;
+    text-align: center;
+    max-width: 400px;
+    margin: auto;
+  }
+  .hero-section .text {
+    justify-content: center;
+    width: 100%;
+  }
+  h2 {
+    font-size: 34px !important;
+  }
+  .involved-section .col-md-4 {
+    margin-bottom: 3rem;
+  }
+  footer .col-md-4 {
+    margin-bottom: 2rem;
+  }
+  footer .social-links {
+    justify-content: flex-start;
+    margin-top: 2rem;
+  }
+  footer ul {
+    padding-left: 0;
+  }
+  .navbar-light .navbar-toggler {
+    border: none;
+  }
+  header .nav-link {
+    padding-left: 0 !important;
+  }
+  .navbar-toggler:focus {
+    box-shadow: none;
+  }
+  .shallow-banner .chakra {
+    margin-bottom: 0;
+    margin-top: -46%;
+  }
+  .attribute-section {
+    background-color: #f6f6f6;
+    padding: 2rem 0;
+    text-align: center;
+  }
+  .attribute-section .col-md-3 .shape {
+    margin-bottom: 3rem;
+  }
+  .attribute-section .col-md-3:last-child .shape {
+    margin-bottom: 0;
+  }
+  .shallow-banner .people img {
+    max-width: 300px;
+  }
+}
+@media (max-width: 768px) {
+  .container {
+    padding: 0 20px;
+  }
 }
