--- a/styles/index.css
+++ b/styles/index.css
@@ -47,12 +47,32 @@ header .container {
 .navbar-light .navbar-nav .nav-link {
   color: #181818;
 }
+.nav-item {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
 .nav-link {
   font-size: 18px;
   color: #000000;
-  padding-left: 3rem !important;
+  padding-left: 1rem !important;
   padding-right: 1rem !important;
 }
+header .nav-link.active {
+  color: #ffa369 !important;
+  position: relative;
+}
+@media screen and (min-width: 992px) {
+  header .nav-link.active::after {
+    content: "";
+    width: 100%;
+    bottom: -10px;
+    height: 2px;
+    background-color: #ffa369;
+    position: absolute;
+    left: 0;
+  }
+}
+
 /* Hero section */
 .hero-section .container {
   padding: 0;
@@ -467,7 +487,7 @@ footer .foot-main:after {
 
   .stats-section .col-lg-3:last-child {
     border-bottom: none;
-    padding-bottom: 0;
+    /* padding-bottom: 0; */
   }
   .hero-section .col-md-6 {
     left: 0;
@@ -526,5 +546,8 @@ footer .foot-main:after {
 @media (max-width: 768px) {
   .container {
     padding: 0 20px;
+  }
+  .stats-section .col-lg-3 {
+    margin-top: 6rem;
   }
 }
