--- a/styles/index.css
+++ b/styles/index.css
@@ -8,6 +8,7 @@ body {
   font-style: normal;
   color: #181818;
   overflow-x: hidden;
+  background-color: #ff0000;
 }
 .container {
   max-width: 1440px;
