--- a/styles/index.css
+++ b/styles/index.css
@@ -1,5 +1,8 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css");
 @import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap");
+
+@import url("https://fonts.googleapis.com/css2?family=Noto+Kufi+Arabic:wght@100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Ruwudu:wght@400;500;600;700&display=swap");
 body {
   margin: 0;
   padding: 0;
@@ -8,6 +11,32 @@ body {
   font-style: normal;
   color: #181818;
   overflow-x: hidden;
+}
+body.ar #number26,
+body.ar #number7,
+body.ar #number76 {
+  font-family: "Ruwudu", serif;
+  font-weight: 500;
+  font-style: normal;
+  line-height: 57%;
+  margin-top: 81px;
+}
+
+/* English */
+body.en {
+  direction: ltr;
+}
+
+/* Arabic */
+body.ar {
+  direction: rtl;
+  font-family: "Noto Kufi Arabic", sans-serif;
+}
+body.ar .ps-6 {
+  padding-left: 3rem;
+}
+body.ar .pe-6 {
+  padding-right: 3rem;
 }
 .container {
   max-width: 1440px;
@@ -117,6 +146,13 @@ header .nav-link.active {
   font-weight: 500;
   z-index: 1;
 }
+
+body.ar .hero-section .container::after {
+  right: 87px;
+}
+body.ar .hero-section .container::before {
+  right: 0px;
+}
 .hero-section .container::after {
   content: "";
   /* background: linear-gradient(180deg, #d9ac52 0%, rgba(217, 172, 82, 0) 100%); */
@@ -161,6 +197,7 @@ header .nav-link.active {
   bottom: -2rem;
   transform: rotate(-180deg);
 }
+
 .history-section .col-lg-6:first-child .image {
   background: url(/assets/images/history.svg) no-repeat center / cover;
   min-height: 50vh;
@@ -186,6 +223,13 @@ header .nav-link.active {
     rgba(68, 111, 80, 0) 117.93%
   ); */
   background: #69be5d;
+}
+body.ar .history-section.focus .col-lg-6:first-child::after {
+  left: -2rem;
+  right: auto;
+}
+body.ar .history-section.focus .col-lg-6:first-child {
+  padding-left: 0 !important;
 }
 .history-section.focus .col-lg-6:first-child .image {
   background: url(/assets/images/child.svg) no-repeat center / cover;
@@ -216,6 +260,10 @@ header .nav-link.active {
   width: 55px;
   height: 55px;
 }
+
+body.ar .stats-section .img-pattern {
+  right: 0;
+}
 .stats-section .img-pattern {
   position: absolute;
   left: 0;
@@ -224,6 +272,9 @@ header .nav-link.active {
   width: 22%;
   padding: 0;
   height: 100%;
+}
+body.ar .stats-section::after {
+  right: 25%;
 }
 .stats-section::after {
   content: "";
@@ -246,6 +297,10 @@ header .nav-link.active {
   font-size: 54px;
   color: #ffffff;
   transform: rotate(-90deg);
+}
+body.ar .stats-section::before {
+  content: "تأثير";
+  left: 68%;
 }
 .stats-section h6 {
   color: #ffffff;
@@ -550,4 +605,38 @@ footer .foot-main:after {
   .stats-section .col-lg-3 {
     margin-top: 6rem;
   }
+}
+
+.popover-hover:hover {
+  background-color: #e9e9e9;
+  cursor: pointer;
+}
+.popover-lang {
+  top: 27px;
+  right: 0px;
+  box-shadow: 0px 4px 14px 0px #00000040;
+  z-index: 1;
+  display: none;
+}
+.popover-hover {
+  gap: 10px;
+}
+
+.popover-parent {
+  cursor: pointer;
+}
+.popover-lang {
+  display: none;
+}
+
+.popover-lang.show {
+  display: block;
+}
+
+#arrow-icon.rotate {
+  transform: rotate(180deg);
+}
+
+.popover-hover.selected {
+  background-color: #f0f0f0; /* Change the background color as needed */
 }
